[gd_scene load_steps=13 format=3 uid="uid://dxx6xubs1bfbr"]

[ext_resource type="Script" path="res://engine/actors/player/Player.gd" id="1_dw56p"]
[ext_resource type="Script" path="res://engine/actors/player/components/interact.gd" id="2_ote7q"]
[ext_resource type="PackedScene" uid="uid://ddeas4dqqgef8" path="res://assets/weapons/assault_rifle/AssaultRifle.tscn" id="4_00qt7"]
[ext_resource type="PackedScene" uid="uid://bcdg4sigkkarn" path="res://assets/HUD/HUD.tscn" id="6_4fgbk"]

[sub_resource type="CapsuleShape3D" id="51"]
resource_local_to_scene = true
radius = 0.49
height = 1.59

[sub_resource type="Animation" id="52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="53"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-5, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kfjl7"]
resource_name = "land"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("camera:v_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.25, 0, 2.08165e-12, 0.25, 0.25, 0, -0.25, 2.08165e-12, 2.08165e-12, 2.08165e-12),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="54"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.01, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("camera:v_offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.1, 0.0]
}

[sub_resource type="Animation" id="55"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.01, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olj6a"]
_data = {
"idle": SubResource("52"),
"jump": SubResource("53"),
"land": SubResource("Animation_kfjl7"),
"sprint": SubResource("54"),
"walk": SubResource("55")
}

[sub_resource type="CylinderShape3D" id="72"]
height = 2.3586
radius = 1.93094

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
collision_layer = 2
collision_mask = 16325
floor_stop_on_slope = false
script = ExtResource("1_dw56p")

[node name="body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("51")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="camera" type="Camera3D" parent="head"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 0, 0)
doppler_tracking = 2
current = true
fov = 70.0
near = 0.01
far = 6500.0

[node name="AssaultRifle" parent="head/camera" instance=ExtResource("4_00qt7")]
transform = Transform3D(-1, 6.97573e-16, -8.74228e-08, 6.97574e-16, 1, -6.97574e-16, 8.74228e-08, -6.97574e-16, -1, 2.08179e-12, -0.216743, -0.7)

[node name="ActionReach" type="RayCast3D" parent="head/camera"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 0, 0)
target_position = Vector3(2.08165e-12, 2.08165e-12, -1.2)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0, 0.368627, 0.541176, 0.509804)
debug_shape_thickness = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="head"]
libraries = {
"": SubResource("AnimationLibrary_olj6a")
}

[node name="ViewTarget" type="Marker3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)

[node name="HeadClearance" type="RayCast3D" parent="."]
transform = Transform3D(1, -6.97573e-16, 6.97573e-16, 6.97573e-16, 1, -6.97574e-16, -6.97573e-16, 6.97574e-16, 1, 2.08165e-12, 0.75, 2.08165e-12)
target_position = Vector3(2.08165e-12, 0.3, 2.08165e-12)
collision_mask = 15553
debug_shape_custom_color = Color(0.54902, 0.0117647, 0.603922, 0.509804)
debug_shape_thickness = 5

[node name="FeetClearance" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
target_position = Vector3(0, -1.7, 0)
debug_shape_custom_color = Color(0.54902, 0.0117647, 0.603922, 0.509804)

[node name="StepDetection" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -1)
exclude_parent = false
target_position = Vector3(2.08165e-12, -0.78, 2.08165e-12)
collision_mask = 32897
hit_from_inside = true
debug_shape_custom_color = Color(0.54902, 0.0117647, 0.603922, 0.509804)
debug_shape_thickness = 4

[node name="hud" type="CanvasLayer" parent="."]

[node name="HUD" parent="hud" instance=ExtResource("6_4fgbk")]

[node name="interactor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
script = ExtResource("2_ote7q")

[node name="CollisionShape" type="CollisionShape3D" parent="interactor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("72")
